FLY wire David/force-app/main/default/objects/Alliance__c/Alliance__c.object-meta.xml
<CustomObject>
    <description>Relationship between Client or Prospect Accounts and Partners, Consultants, Agencies, etc.</description>
    <label>Alliance</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Alliance Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>