FLY wire David/force-app/main/default/objects/Alliance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the Client or Prospect Account you want to create an Association to a Partner, Agent, Consultant etc. with.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Education, Commercial, Healthcare, Strategic Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alliances</relationshipLabel>
    <relationshipName>AccountAssociations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>