FLY wire David/force-app/main/default/objects/Alliance__c/fields/Alliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Type__c</fullName>
    <inlineHelpText>What type of relationship do these accounts have?</inlineHelpText>
    <label>Alliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/R Collection System</fullName>
            </value>
            <value>
                <fullName>Advocacy - Eligibility Enrollment Services</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Competitor - online / engagement</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Credit / P2P Scoring</fullName>
            </value>
            <value>
                <fullName>Early Out Collection Agency</fullName>
            </value>
            <value>
                <fullName>EHR</fullName>
            </value>
            <value>
                <fullName>Merchant Processor</fullName>
            </value>
            <value>
                <fullName>Patient Access - Estimation</fullName>
            </value>
            <value>
                <fullName>Patient Access - Patient Intake</fullName>
            </value>
            <value>
                <fullName>Patient Access - Scheduling</fullName>
            </value>
            <value>
                <fullName>Revenue Share Partner</fullName>
            </value>
            <value>
                <fullName>Statements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>